--- a/web_dynamic/static/styles/3-footer.css
+++ b/web_dynamic/static/styles/3-footer.css
@@ -1,11 +1,12 @@
 footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    background-color: white;
-    height: 60px;
-    border-top: 1px solid #CCCCCC;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+	height: 60px;
+	width: 100%;
+	display: flex;
+	border-top: 1px solid #CCC;
+	justify-content: center;
+	align-items: center;
+}
+
+footer p {
+	margin: 0;
 }
