--- a/web_dynamic/templates/0-hbnb.html
+++ b/web_dynamic/templates/0-hbnb.html
@@ -2,11 +2,11 @@
 <html lang="en">
 	<head>
 		<link rel="shortcut icon" href="../static/images/icon.ico" >
-		<link rel="stylesheet" href="../static/styles/4-common.css{{ cache_id }}"/>
-		<link rel="stylesheet" href="../static/styles/3-header.css{{ cache_id }}"/>
-		<link rel="stylesheet" href="../static/styles/3-footer.css{{ cache_id }}"/>
-		<link rel="stylesheet" href="../static/styles/6-filters.css{{ cache_id }}"/>
-		<link rel="stylesheet" href="../static/styles/8-places.css{{ cache_id }}"/>
+		<link rel="stylesheet" href="../static/styles/4-common.css?{{ cache_id }}"/>
+		<link rel="stylesheet" href="../static/styles/3-header.css?{{ cache_id }}"/>
+		<link rel="stylesheet" href="../static/styles/3-footer.css?{{ cache_id }}"/>
+		<link rel="stylesheet" href="../static/styles/6-filters.css?{{ cache_id }}"/>
+		<link rel="stylesheet" href="../static/styles/8-places.css?{{ cache_id }}"/>
 		<link rel="icon" href="../static/images/icon.png">
 		<title>HBNB</title>
 	</head>
@@ -14,16 +14,17 @@
 			<header>
 				<div class="logo"></div>
 			</header>
-			<div class="container">
+			<main class="container">
 				<section class="filters">
-					<button>Search</button>
 					<div class="locations">
-						<h3>States</h3>
-						<h4>&nbsp;</h4>
-						<ul class="popover">
+						<div class="filters-tab">
+							<h3>States</h3>
+							<h4>&nbsp;</h4>
+						</div>
+						<ul class="popover locations-list">
 							{% for state in states %}
-							<li class="wrapper">
-								<h2>{{ state.name }}</h2>
+							<li class="list_item-states">
+								<h2 class="popover-heading">{{ state.name }}</h2>
 								<ul>
 									{% for city in state.cities %}
 									<li><h4>{{ city.name }}</h4></li>
@@ -34,41 +35,61 @@
 						</ul>
 					</div>
 					<div class="amenities">
-						<h3>Amenities</h3>
-						<h4>&nbsp;</h4>
-						<ul class="popover">
+						<div class="filters-tab">
+							<h3>Amenities</h3>
+							<h4>&nbsp;</h4>
+						</div>
+						<ul class="popover amenities-list">
 							{% for amenity in amenities %}
 							<li><h4>{{ amenity.name }}</h4></li>
 							{% endfor %}
 						</ul>
 					</div>
+					<button type="button">Search</button>
 				</section>
 				<section class="places">
 					<h1>Places</h1>
 					{% for place in places %}
-					<article>
-						<h2>{{ place.name }}</h2>
-						<div class="price_by_night">${{ place.price_by_night }}</div>
-						<div class="information">
-							<div class="max_guest">
-								<span></span>
-								<p>{{ place.max_guest }} Guests</p>
+					<div class="places-container">
+						<article class="place">
+							<div class="place-header">
+								<h2 class="place-name">{{ place.name }}</h2>
+								<div class="price_by_night">
+									<p>
+									${{ place.price_by_night }}
+									</p>
+								</div>
 							</div>
-							<div class="number_rooms">
-								<span></span>
-								<p>{{ place.number_rooms }} Bedroom</p>
+							<div class="information">
+								<div class="info max_guest">
+									<div class="icon icon-guest"></div>
+									<p>{{ place.max_guest }} Guests</p>
+								</div>
+								<div class="info number_of_rooms">
+									<div class="icon icon-bed"></div>
+									<p>{{ place.number_rooms }} Bedroom</p>
+								</div>
+								<div class="info number_of_bathrooms">
+									<div class="icon icon-bath"></div>
+									<p>{{ place.number_bathrooms }} Bathroom</p>
+								</div>
 							</div>
-							<div class="number_bathrooms">
-								<span></span>
-								<p>{{ place.number_bathrooms }} Bathroom</p>
+							<div class="description-container">
+								<div class="user">
+									<p>
+									<span>Owner</span>
+									: {{ users['User.' + place.user_id].first_name + ' ' + users['User.' + place.user_id].last_name}}
+									</p>
+								</div>
+								<div class="description">
+									{{ place.description|safe }}
+								</div>
 							</div>
-						</div>
-						<div class="user"><b>Owner</b>: {{ users['User.' + place.user_id].first_name + ' ' + users['User.' + place.user_id].last_name}}</div>
-						<div class="description">{{ place.description|safe }}</div>
-					</article>
+						</article>
+					</div>
 					{% endfor %}
 				</section>
-			</div>
+			</main>
 			<footer>
 				<p>Holberton School</p>
 			</footer>
