--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -5,7 +5,7 @@ header {
 }
 
 .logo {
-	background-image: url('../images/hbnb_logo.png');
+	background-image: url('../images/logo.png');
 	background-repeat: no-repeat;
 	background-position: 20px center;
 	height: 100%;
