Feat: Add custom styles for checkboxes

--- a/web_dynamic/static/styles/6-filters.css
+++ b/web_dynamic/static/styles/6-filters.css
@@ -48,6 +48,7 @@
 }
 
 .filters-tab {
+	cursor: pointer;
 	min-height: 70px;
 	display: flex;
 	flex-direction: column;
@@ -109,4 +110,54 @@
 	font-size: 2rem;
 	font-weight: 600;
 	margin-bottom: 4px;
+}
+
+.form-control {
+	display: grid;
+	grid-template-columns: 1em auto;
+	gap: 1em;
+}
+
+input[type="checkbox"] {
+	-webkit-appearance: none;
+	appearance: none;
+	background-color: #fff;
+	margin: 0;
+	color: currentColor;
+	width: 1.15em;
+	height: 1.15em;
+	border: 0.15em solid currentColor;
+	border-radius: 0.15em;
+	transform: translateY(-0.075em);
+	display: grid;
+	place-content: center;
+}
+
+input[type="checkbox"]::before {
+	content: "";
+	width: 0.65em;
+	height: 0.65em;
+	transform: scale(0);
+	transition: 120ms transform ease-in-out;
+	box-shadow: inset 1em 1em #FF5A5F;
+	transform-origin: bottom left;
+	clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+}
+
+input[type="checkbox"]:checked::before {
+	transform: scale(1);
+}
+
+input[type="checkbox"]:focus {
+  outline: max(2px, 0.15em) solid currentColor;
+  outline-offset: max(2px, 0.15em);
+}
+
+
+.form-control h4 {
+	padding: 4px 0;
+}
+
+.form-control + .form-control {
+	margin-top: 1em;
 }
