--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -2,6 +2,8 @@ header {
 	height: 70px;
 	width: 100%;
 	border-bottom: 1px solid #CCCCCC;
+  display: flex;
+  align-items: center;
 }
 
 .logo {
@@ -9,5 +11,18 @@ header {
 	background-repeat: no-repeat;
 	background-position: 20px center;
 	height: 100%;
-	width: auto;
+	width: 160px;
+}
+
+#api_status {
+  width: 40px;
+  height: 40px;
+  background-color: #CCCCCC;
+  margin-left: auto;
+  border-radius: 50%;
+  margin-right: 30px;
+}
+
+.available {
+  background-color: #ff545f !important;
 }
